# CandiApp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt  run_research_features_benchmark.py  test_new_features.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: .env.example  Dockerfile  README.md  main.py  requirements.txt
backend/config/: __init__.py  settings.py  verb_taxonomy.json
backend/database/: __init__.py  db.py  models.py
backend/engines/: __init__.py  hydrodynamic.py  screening_engine.py  semantic_matcher.py  verb_extractor.py
backend/models/: __init__.py  archetype.py  candidate.py  job.py
backend/routes/: __init__.py  candidates.py  health.py  jobs.py  screening.py  webhooks.py
backend/tests/: fixtures.json
backend/utils/: __init__.py  email_sender.py
benchmarks/: .gitignore  BENCHMARK_REPORT.md  BENCHMARK_RESULTS.md  README.md  V2_GPU_BENCHMARK_RESULTS.md  V2_VISUAL_COMPARISON.md  __init__.py  benchmark_framework.py  benchmark_results.json  generate_dataset.py  report_generator.py  run_benchmark.py  run_benchmark_demo.py  run_benchmarks.py  run_v2_comparison.py  synthetic_data_generator.py
docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  COMPLETE_FEATURE_LIST.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  README.md  STARTUP_TECH_ROADMAP.md  benchmarks.md  feature_engineering.md
examples/: README.md  feature_engineering_demo.py  parse_resume.py  score_candidate.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: AppBar.tsx  DashboardLayout.jsx  ScreeningResult.tsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx  ResultsPage.tsx  ResumeDetail.jsx  Resumes.jsx  Score.jsx  ScreeningPage.tsx  Upload.jsx
frontend/src/services/: api.js  api.ts
frontend/src/types/: index.ts
nginx/: nginx.prod.conf
src/candiapp/: __init__.py  advanced_features.py  bert_features.py  enhanced_parser.py  feature_store.py  features.py  models.py  multilingual.py  nlp_advanced.py  parser.py  scoring.py  semantic_matching.py
src/candiapp/api/: __init__.py  auth.py  config.py  database.py  logging_config.py  main.py  schemas.py
tests/: __init__.py  test_api.py  test_features.py  test_parser.py  test_scoring.py
